--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,38 +1,60 @@
+/* font-family: 'Montserrat', sans-serif; */
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=PT+Serif:wght@400;700&family=Poppins:wght@400;600&display=swap');
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
 body {
-  /* font-family: 'Montserrat', sans-serif; */
   font-family: 'Poppins', sans-serif;
-  /* font-family: 'PT Serif', serif; */
+  font-size: 1.4rem;
 }
 
-ul {
-  padding-left: 24px;
+img {
+  height: auto;
+  width: 100%;
 }
 
-li {
-  margin-bottom: 8px;
+.container {
+  padding: 0 1em;
 }
 
-.welcome {
-  max-width: 800px;
-  margin: 0 auto;
+/* Header */
+.header {
+  margin-bottom: 4.5em;
 }
 
-.welcome-text {
-  margin-top: 30vh;
-  font-weight: 500;
+.header__title {
+  font-family: 'PT Serif', serif;
+  font-size: 2.5714285714285716em;
+  font-weight: bold;
+  line-height: 1.3333333333333333;
+  margin: 0.5em 0 1em 0;
 }
 
-.welcome-text p {
-  font-size: 1rem;
-  font-weight: 400;
+.header__who {
+  line-height: 1.5;
 }
 
-.welcome-text h1 {
-  font-size: 1.5rem;
+.header__who-title {
+  font-size: 1.2857142857142858em;
+  font-weight: 600;
+  margin-bottom: 0.5555555555555556em;
+  text-transform: uppercase;
 }
 
-.welcome-text a {
-  color: #f7542e;
+/* Footer */
+.footer {
+  margin: 4em 0 2em 0;
+  text-align: center;
 }
