--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,3 @@
-/* font-family: 'Montserrat', sans-serif; */
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=PT+Serif:wght@400;700&family=Poppins:wght@400;600&display=swap');
 
 *,
@@ -65,6 +63,11 @@ img {
   width: 48%;
 }
 
+.card:nth-child(2n) {
+  margin-bottom: 1em;
+  margin-top: 5em;
+}
+
 .card__profile {
   position: relative;
 }
@@ -74,13 +77,14 @@ img {
 }
 
 .card__profile-job {
+  font-family: 'PT Serif', serif;
+  font-size: 0.7142857142857143em;
+  position: absolute;
+  right: -98%;
+  text-transform: uppercase;
+  top: -1%;
   transform: rotate(90deg);
   transform-origin: 0% 15%;
-  text-transform: uppercase;
-  font-size: 0.7142857142857143em;
-  right: -98%;
-  position: absolute;
-  top: -1%;
   width: 100%;
 }
 
@@ -92,6 +96,8 @@ img {
 
 /* Footer */
 .footer {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
   margin: 4em 0 2em 0;
   text-align: center;
 }
